--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 exceptiongroup==1.2.2
 fastapi==0.115.12
 google-api-core==2.24.2
@@ -18,7 +19,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 MouseInfo==0.1.3
 mss==10.0.0
-numpy==2.0.2
+numpy==2.2.4
 opencv-python==4.11.0.86
 pillow==11.1.0
 proto-plus==1.26.1
@@ -30,9 +31,6 @@ pydantic==2.11.3
 pydantic_core==2.33.1
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
-pyobjc-core==11.0
-pyobjc-framework-Cocoa==11.0
-pyobjc-framework-Quartz==11.0
 pyparsing==3.2.3
 pyperclip==1.9.0
 PyRect==0.2.0
